--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class='main-content'>
         {{>header}}
+        <p>This site is created by Smriti Singh. It uses data from mapbox.com and weatherstack.com !!</p>
         <img src="/images/robot.png" alt="robot image">
     </div>
     {{>footer}}
