add image to forecast

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,7 @@
         </form>
         <p id="paragraph-1"></p>
         <p id="paragraph-2"></p>
+        <img id="image" src="" alt="">
     </div>
     {{>footer}}
     <script src="/js/app.js"></script>
